# rl

./: .cproject  .editorconfig  .gitignore  .gitignore~  .project  .travis.yml  .~lock.Development_Notes.odt#  AI.h  AIProject.eap  AIProjectv2.layout  AI_Header.txt  Action.pch  ActuatorAction.h  Agent.h  CMakeLists.txt  CreateHeaderFile.sh  DefinitionDoc.h  Development_Notes.odt  GlobalHeader.h  HashMurmur3.cpp  HashMurmur3.h  HashSuperFastHash.cpp  HashSuperFastHash.h  HashUNH.cpp  HashUNH.h  IndexDoc.h  MainHeader.sh  Makefile  Observable.h  Observer.h  README.md  SensorStatesAbstract.h  SensorStatesContinous.h  SensorStatesDiscrete.h  StateAction.h  StateActionNotExistException.cpp  StateActionNotExistException.h  StateActionPairContainer.h  StateActionPairValueComparison.h  StateNotExistException.cpp  (+12 more)
AIBase/: SensorContinous.h  SensorDiscrete.h  SensorStatesAbstract.h  SensorStatesContinous.h  SensorStatesDiscrete.h  StateAction.h  StateActionNotExistException.cpp  StateActionNotExistException.h  StateActionPairContainer.h  StateNotExistException.cpp
Algorithms/: LearningAlgorithm.h
Development/: Development_Notes.odt  doc.aux  doc.tex
Tests/: Action_test-report.xml  ActuatorMountainCar.cpp  DynaQETWatkins_test  DynaQ_test  (+27 more)
src/: CMakeLists.txt  GradientDescent.cpp  HashMurmur3.cpp  HashUNH.cpp  LinearProgramming.cpp  MurmurHash3.cpp  ReinforcementLearningGD.cpp  StateActionNotExistException.cpp  StateNotExistException.cpp  SuperFastHash.cpp  TileCodeCorrect.cpp  TileCodeMt1993764.cpp  TileCodeMurMur.cpp  UNH.cpp  xxhash.cpp
src/agent/: CMakeLists.txt  StateActionNotExistException.cpp  StateActionTransitionException.cpp  StateNotExistException.cpp
src/algorithm/: CMakeLists.txt
src/algorithm/gradient-descent/: CMakeLists.txt  QLearningETGD.cpp  QLearningGD.cpp  ReinforcementLearningGD.cpp  ReinforcementLearningGDAbstract.cpp  ReinforcementLearningGDET.cpp  SarsaETGD.cpp  SarsaGD.cpp
src/coding/: CMakeLists.txt  TileCodeContainer.cpp  TileCodeContainerCell.cpp  TileCodeContainerSegment.cpp  TileCodeCorrect.cpp  TileCodeCorrectFactory.cpp  TileCodeFactory.cpp  TileCodeMt1993764.cpp  TileCodeMt1993764Factory.cpp  TileCodeMurMur.cpp  TileCodeMurMurFactory.cpp  TileCodeSuperFastHash.cpp  TileCodeSuperFastHashFactory.cpp  TileCodeUNH.cpp  TileCodeUNHFactory.cpp
src/coding/container/: CMakeLists.txt  TileCodeContainerCell.cpp  TileCodeContainerSegment.cpp
src/db/: CMakeLists.txt  definition.cpp  manipulation.cpp  utility.cpp
src/hash/: CMakeLists.txt  HashMurmur3.cpp  HashSuperFastHash.cpp  HashUNH.cpp
src/intrinsic/: CMakeLists.txt  GradientDescent.cpp  GradientDescentAbstract.cpp  GradientDescentET.cpp  TileCode.cpp
test/: AIProject_testRunner.cpp  ActuatorMountainCar.cpp  ActuatorRandomWalk.cpp  CMakeLists.txt  DynaQETWatkins_test.cpp  DynaQPrioritizedSweeping_test  DynaQPrioritizedSweeping_test.cpp  DynaQ_test.cpp  Graph_test.cpp  MountainCarEnvironment.cpp  QLearningETGD_test  QLearningETGD_test.cpp  QLearningETWatkins_test.cpp  QLearning_test.cpp  RandomWalkEnvironment.cpp  SarsaETGD_test  SarsaETGD_test.cpp  SarsaET_test  SarsaET_test.cpp  Sarsa_test  Sarsa_test.cpp  SensorMountainCar.cpp  SensorMountainCar.h  SensorRandomWalk.cpp  Softmax_test  Softmax_test.cpp  StateActionTransition_test  StateActionTransition_test.cpp  StateAction_test  State_test-report.xml  TileCode_test  TileCode_test.cpp  index.js  rl_testRunner.cpp  testRunner.cpp
test/env/: .gitignore  env-interface.js  index.js
test/env/linux/: index.js  linux-env.js
test/env/linux/centos/: centos-env.js  index.js
test/env/linux/centos/7/: Dockerfile.erb
test/env/linux/common/: dependencies.sh  executeTest.sh
test/env/linux/ubuntu/: index.js  ubuntu-env.js
test/env/linux/ubuntu/15.10/: Dockerfile.erb
test/etc/: #SensorRandomWalk.h#  MountainCarEnvironment.cpp  RandomWalkEnvironment.cpp  SensorMountainCar.cpp  SensorMountainCar.h  SensorRandomWalk.cpp
test/helper/include/: MountainCarEnvironment.h  RandomWalkEnvironment.h  SensorMountainCar.h  SensorRandomWalk.h
test/helper/src/: CMakeLists.txt  MountainCarEnvironment.cpp  RandomWalkEnvironment.cpp  SensorMountainCar.cpp  SensorRandomWalk.cpp
test/include/: DynaQETWatkins_test.h  DynaQPrioritizedSweeping_test.h  DynaQ_test.h  Graph_test.h  HillClimbing_test.h  NQueen.h  QLearningETGD_test.h  QLearningETWatkins_test.h  QLearning_test.h  SarsaETGD_test.h  SarsaET_test.h  Sarsa_test.h  Softmax_test.h  StateActionTransition_test.h  StateAction_test.h  TileCode_test.h
test/src/: AgentSupervised_test.cpp  CMakeLists.txt  DynaQETWatkins_test.cpp  DynaQPrioritizedSweeping_test.cpp  DynaQ_test.cpp  Graph_test.cpp  HillClimbing_test.cpp  MountainCarEnvironment.cpp  QLearningETGD_test.cpp  QLearningETWatkins_test.cpp  QLearning_test.cpp  RandomWalkEnvironment.cpp  SarsaETGD_test.cpp  SarsaET_test.cpp  Sarsa_test.cpp  SensorMountainCar.cpp  SensorRandomWalk.cpp  Softmax_test.cpp  StateActionTransition_test.cpp  StateAction_test.cpp  TileCode_test.cpp
test/src/agent/: ActionContainer_test.cpp  ActionSet_test.cpp  ActuatorBase_test.cpp  AgentSupervised_test.cpp  Agent_test.cpp  Environment_test.cpp  SensorDiscrete_test.cpp  Sensor_test.cpp  StateActionNotExistException_test.cpp  StateActionPairContainer_test.cpp  StateActionPairValueComparison_test.cpp  StateActionTransitionException_test.cpp  StateActionTransition_test.cpp  StateAction_test.cpp  StateNotExistException_test.cpp
test/src/algorithm/: DynaQETWatkins_test.cpp  DynaQPrioritizedSweeping_test.cpp  DynaQ_test.cpp  QLearningETWatkins_test.cpp  QLearning_test.cpp  SarsaET_test.cpp  Sarsa_test.cpp
test/src/algorithm/gradient-descent/: QLearningETGD_test.cpp  QLearningGD_test.cpp  SarsaETGD_test.cpp  SarsaGD_test.cpp
test/src/coding/: DimensionInfo_test.cpp  TileCodeContainerCell_test.cpp  TileCodeContainerSegment_test.cpp  TileCodeContainer_test.cpp  TileCodeCorrect_test.cpp  TileCodeMt1993764_test.cpp  TileCodeMurMur_test.cpp  TileCodeSuperFastHash_test.cpp  TileCodeUNH_test.cpp  TileCode_test.cpp
test/src/policy/: Softmax_test.cpp
test/src/utility/: utility_test.cpp
(+986 files in other folders)
