include_directories(${AIProject_SOURCE_DIR}/include)

if(${intrinsic} STREQUAL "none")
  add_definitions(-DNO_INTRINSIC)
  set(INTRINSIC_FLAG "" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "mmx")
  add_definitions(-DMMX)
  set(INTRINSIC_FLAG "-mmmx" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "sse")
  add_definitions(-DSSE)
  set(INTRINSIC_FLAG "-msse" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "sse2")
  add_definitions(-DSSE2)
  set(INTRINSIC_FLAG "-msse2" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "sse3")
  add_definitions(-DSSE3)
  set(INTRINSIC_FLAG "-msse3" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "sse4")
  add_definitions(-DSSE4)
  set(INTRINSIC_FLAG "-msse4" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "sse4.1")
  add_definitions(-DSSE4_1)
  set(INTRINSIC_FLAG "-msse4.1" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "sse4.2")  
  add_definitions(-DSSE4_2)
  set(INTRINSIC_FLAG "-msse4.2" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "sse4a")
  add_definitions(-DSSE4A)
  set(INTRINSIC_FLAG "-msse4a" PARENT_SCOPE)  
elseif(${intrinsic} STREQUAL "avx")
  add_definitions(-DAVX)
  set(INTRINSIC_FLAG "-mavx" PARENT_SCOPE)  
else()
  message( SEND_ERROR "intrinsic=${intrinsic} is not recognized." )
endif()

# Sources
file(GLOB SRC_INT_FILES "*.cpp")
SET( CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} ${INTRINSIC_FLAG} )
add_library(aiproject2Intrinsic OBJECT ${SRC_INT_FILES})